--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ NINJA_PORT=5701
 NINJA_NOTIFY=true
 
 # user-agent
-NINJA_UA=" UCBrowser/13.4.2.1122"
+NINJA_UA="Mozilla/5.0 (Linux; Android 8.1.0; 16th Plus Build/OPM1.171019.026; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/77.0.3865.120 MQQBrowser/6.2 TBS/045713 Mobile Safari/537.36 MMWEBID/7516 MicroMessenger/8.0.10.1960(0x28000A3D) Process/tools WeChat/arm64 Weixin NetType/WIFI Language/zh_CN ABI/arm64"
